--- a/nabthat/pick-a-car/index.html
+++ b/nabthat/pick-a-car/index.html
@@ -386,7 +386,7 @@
             <span class="choose-text" style="margin-right:0px;">Choose:</span> 
             <input class="zipcode1" id="zipcode1" maxlength="5" name="zipcode" placeholder="Colors " type="text" validate="true" data-toggle="modal" data-target="#myModal2">
           </div>
-          <button class="nabthat-button button-small h4 bggreen next-arrow select_car_button" href="#terms" role="tab" data-toggle="tab" style="padding-top:10px;padding-bottom:10px;">Select Car</button>
+          <button class="nabthat-button button-small h4 bggreen next-arrow select_car_button" href="" role="tab" data-toggle="tab" style="padding-top:10px;padding-bottom:10px;">Select Car</button>
           <a href="https://www.nabthat.com/buy/info/Acura/ILX?yr=2015&modelname=Acura_ILX&zipcode=90001#schedule_test_drive" class="schd-btn-color" data-toggle="modal" id="LuckyAnchor_650926950_75">Schedule a test drive</a>
           <!--  schedule test drive modal -->
 
