loading server file content

--- a/nabthat/widget/bottom/index.html
+++ b/nabthat/widget/bottom/index.html
@@ -88,7 +88,7 @@
     //  Or init in this way:
     var inst = $('[data-remodal-id=modal2]').remodal();
     //  inst.open();
-        $('#bottom_widget').load('bottom/index.html')
+        $('#bottom_widget').load('https://www.nabthat.com/422old.html')
 </script>
 </body>
 </html>
