--- a/nabthat/bottom-widget.html
+++ b/nabthat/bottom-widget.html
@@ -1,7 +1,28 @@
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-<script type="text/javascript">$jq211 = jQuery.noConflict( true );
-var DEALERID= 1525;
-var CARNAME="Toyota";
-var SOURCEURL = window.location</script>
-<script src="http://107.170.159.234/widget/bottom-widget.js"></script>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+    <title>Bottom Widget</title>
+    <meta name="description" content="Remodal example">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <script type="text/javascript">$jq211 = jQuery.noConflict( true );
+        var DEALERID= 1525;
+        var CARNAME="Toyota";
+        var SOURCEURL = window.location
+    </script>
+    <script src="http://107.170.159.234/widget/bottom-widget.js"></script>
+</head>
+<body>
+
+<div data-remodal-id="modal2">
+    <h1>Another one window</h1>
+    <p>
+        Hello!
+    </p>
+    <br>
+    <a class="remodal-confirm" href="#">Hello!</a>
+</div>
+</body>
+</html>
