--- a/nabthat/bottom-widget.html
+++ b/nabthat/bottom-widget.html
@@ -9,7 +9,7 @@
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script type="text/javascript">$jq211 = jQuery.noConflict( true );
         var DEALERID= 1525;
-        var CARNAME="Toyota";
+        var TYPE="Bottom";
         var SOURCEURL = window.location
     </script>
     <script src="http://107.170.159.234/widget/bottom-widget.js"></script>
