added nabthat exit widget scripte

--- a/nabthat/bottom-widget.html
+++ b/nabthat/bottom-widget.html
@@ -17,7 +17,7 @@
 <body>
 
 <div data-remodal-id="modal2">
-    <h1>Another one window</h1>
+    <h1>Bottom WIdget</h1>
     <p>
         Hello!
     </p>
