--- a/nabthat/exit-widget.html
+++ b/nabthat/exit-widget.html
@@ -1,3 +1,22 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+    <title>Exit Widget</title>
+    <meta name="description" content="Remodal example">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+</head>
+<body>
+
+<div data-remodal-id="modal2">
+    <h1>Exit Widget</h1>
+    <p>
+        Hello!
+    </p>
+    <br>
+    <a class="remodal-confirm" href="#">Hello!</a>
+</div>
+</body>
 <link rel="stylesheet" type="text/css" href="http://107.170.159.234/exit-widget/jquery.remodal.css"/>
 <link rel="stylesheet" type="text/css" href="http://107.170.159.234/exit-widget/style.css"/>
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
@@ -5,3 +24,5 @@
 <script src="http://107.170.159.234/exit-widget/jquery.remodal.js"></script>
 <script type="text/javascript">$jq211 = jQuery.noConflict(true);</script>
 <script src="http://107.170.159.234/widget/exit-widget-remodal.js"></script>
+
+</html>
