bottom widget text added

--- a/nabthat/test-widget/bottom.html
+++ b/nabthat/test-widget/bottom.html
@@ -2,6 +2,6 @@
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 <script type="text/javascript">$jq211 = jQuery.noConflict(true);
 var DEALERID= 1866
-var TYPE = "Exit-widget"
+var TYPE = "Bottom-widget"
 var SOURCEURL = window.location</script>
 <script src="https://www.nabthat.com/widget/bottom-widget.js"></script>
